--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "update": "git pull && yarn build && pm2 restart frontend"
+    "update": "git pull && yarn && yarn build && pm2 restart frontend"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
