--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sveltejs/adapter-node": "^1.0.0-next.55",
     "cookie": "^0.4.1",
     "dayjs": "^1.10.7",
+    "socket.io-client": "^4.4.0",
     "svelte-markdown": "^0.1.14"
   }
 }
